--- a/main.css
+++ b/main.css
@@ -76,6 +76,9 @@ GAP
 }
 
 .main-header {
+  position: sticky;
+  top: 0;
+  z-index: 100;
   height: 8rem;
   background-color: var(--dark-clr);
   padding: 0 2.4rem;
